# generate_smiles

./: .pre-commit-config.yaml  CLAUDE.md  README.md  chem_gan.py  chem_vae.py  chemutils.py  pyproject.toml
models/: rnn_model.py
models/customs/: chem_gan.py  chem_vae.py  chemutils.py
tests/: test_chemutils.py  test_models.py  test_smiles_char_dict.py
